# ROS_Ackerman_Monster_Truck_

./: README.md
Arduino_Low_Level_Control/: Arduino_Low_Level_Control.ino  b_ROS_Publishers_Subscribers.ino  c_setup.ino  d_loop.ino  e_ROS_Callbacks_And_Functions.ino  f_ultrasonic.ino  g_motors.ino  h_servo.ino  i_encoder.ino  j_navigation.ino  k_GUI.ino  navigation.ino
Arduino_Low_Level_Control/src/: Arduino_Low_Level_Control.ino  d_loop.ino  g_motors.ino
Monster_Truck_UI/: CMakeLists.txt  CMakeLists.txt.user.22  CMakeLists.txt.user.4.10-pre1  CMakeLists.txt.user.adae1b7.4.10-pre1  mainpage.dox  package.xml
Monster_Truck_UI/src/: main.cpp  mainwindow.cpp  mainwindow.h  (+1 more)
Monster_Truck_URDF/: CMakeLists.txt  package.xml
ROS/: CMakeLists.txt  package.xml
build-Monster_Truck_UI-Desktop-Default/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  Monster_Truck_UI.cbp  cmake_install.cmake
ros_ackerman_monster_truck/: CMakeLists.txt  package.xml
ros_ackerman_monster_truck/qtros/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.21  CMakeLists.txt.user.4.8-pre1  package.xml
ros_ackerman_monster_truck/qtros/include/qtros/: main_window.hpp  qnode.hpp
ros_ackerman_monster_truck/qtros/src/: main_window.cpp  qnode.cpp
ros_ackerman_monster_truck/qtros/ui/: main_window.ui
ros_ackerman_monster_truck/src/: gamw.cpp  main.cpp
ros_ackerman_monster_truck/src/movement/: Motor.cpp  Motor.h  Move.cpp  Move.h  Servo.cpp  Servo.h
ros_ackerman_monster_truck/src/obstacle_avoidance/: UltrasonicSensors.cpp  UltrasonicSensors.h
ros_ackerman_monster_truck/src/publishers/: Publishers.cpp  Publishers.h
ros_ackerman_monster_truck/src/publishers_subscribers/: Publishers.h  Subscribers.h  Subscribers.h.autosave
ros_ackerman_monster_truck/src/speed_limiter/: OpticalEncoder.cpp  OpticalEncoder.h
ros_ackerman_monster_truck/src/subscribers/: Subscribers.cpp  Subscribers.h
src/: c_setup.ino  f_ultrasonic.ino  i_encoder.ino
(+50 files in other folders)
